<resources>
    <string name="app_name">Audiapp</string>
    <string name="app_name_mayus">AUDIAPP</string>
    <string name="contentDescriptionLogo">Logotipo</string>
    <string name="title_registro">Creación de cuenta</string>
    <string name="title_login">Iniciar sesión</string>
    <string name="label_tenerCuenta">¿Tienes una cuenta?</string>
    <string name="button_signup">Sí, sí tengo</string>
    <string name="button_login">No, no tengo</string>
    <string name="button_accesoAnonimo">Accederé sin cuenta</string>
    <string name="button_aceptar">Aceptar</string>
    <string name="hint_eMail">E-mail</string>
    <string name="hint_nick">Nombre de usuario</string>
    <string name="hint_contrasenya">Contraseña</string>
    <string name="title_elegir_modulo">Selección de módulo</string>
    <string name="button_modulo_crearProgresion">Crear progresión</string>
    <string name="button_modulo_adivinar">Adivinar</string>
    <string name="drawer_cerrar_sesion">Cerrar sesión</string>
    <string name="drawer_ver_perfil">Mi perfil</string>
    <string name="drawer_ver_progresiones">Mis progresiones</string>
    <string name="drawer_ver_mis_estadisticas">Mis estadísticas</string>
    <string name="title_ver_progresiones">Mis progresiones</string>
    <string name="info_num_acordes_progresion">Número de acordes:</string>
    <string name="info_fecha_progresion">Fecha de creación:</string>
    <string name="title_gestor_progresion">Gestión de progresión</string>
    <string name="usuario_anonimo">Anónimo</string>
    <string name="title_elegir_modo_creacion_ejercicio">Creación del ejercicio</string>
    <string name="button_goEjercicioPorNivel">Según nivel</string>
    <string name="button_goEjercicioPorOpciones">Por opciones</string>
    <string name="title_ejercicio_opciones">Opciones del ejercicio</string>
    <string name="title_crear_progresion">Crear progresión</string>
    <string name="title_referencia_acordes">Hoja de referencia</string>
    <string name="info_crear_progresion">Escribe (con cifrado americano) los acordes de la progresión</string>
    <string name="toast_corregir_acordes_crear_progresion">Corrige los acordes que formarán la progresión</string>
    <string name="toast_corregir_tempo_crear_progresion">Determina el tempo de la progresión</string>
    <string name="info_add">Añadir</string>
    <string name="item_referencia_acorde">Mostrar hoja de referencia</string>
    <string name="title_reproductor">Reproductor</string>
    <string name="info_reproductor_creada">Para finalizar, reproduce la progresión para comprobar que es la deseada y guárdala</string>
    <string name="info_caracteristicas_progresion">Características de la progresión</string>
    <string name="info_num_acordes_creada">Número de acordes: %d</string>
    <string name="info_tempo_creada">Tempo: %s</string>
    <string name="info_tonalidades_creada">Tonalidades: %s</string>
    <string name="info_guardar">Guardar</string>
    <string name="title_tonalidad">Tonalidad</string>
    <string name="info_tonalidad_ejercPorOpciones">Elige las tonalidades</string>
    <string name="title_tipo_ejercicio">Tipo</string>
    <string name="info_tipo_ejercPorOpciones">Selecciona los tipos de progresiones deseados</string>
    <string name="info_inversion_ejercPorOpciones">¿Quieres inversiones?</string>
    <string name="title_tempo">Tempo</string>
    <string name="info_tempo_ejercPorOpciones">Determina el tempo</string>
    <string name="type_triadas">Tríadas</string>
    <string name="type_7asDominante">Séptimas de dominante</string>
    <string name="type_otras7as">Otras séptimas</string>
    <string name="text_si">Sí</string>
    <string name="text_no">No</string>
    <string name="text_mayor">Mayor</string>
    <string name="text_menor">Menor</string>
    <string name="tonalidad_C">C</string>
    <string name="tonalidad_CDSB">C#/Db</string>
    <string name="tonalidad_D">D</string>
    <string name="tonalidad_DESB">D#/Eb</string>
    <string name="tonalidad_E">E</string>
    <string name="tonalidad_F">F</string>
    <string name="tonalidad_FGSB">F#/Gb</string>
    <string name="tonalidad_G">G</string>
    <string name="tonalidad_GASB">G#/Ab</string>
    <string name="tonalidad_A">A</string>
    <string name="tonalidad_ABSB">A#/Bb</string>
    <string name="tonalidad_B">B</string>
    <string name="option_tempo_manual">Manual</string>
    <string name="option_tempo_prefab">Predefinido</string>
    <string name="type_grave_tempo">Grave</string>
    <string name="type_largo_tempo">Largo</string>
    <string name="type_lento_tempo">Lento</string>
    <string name="type_adagio_tempo">Adagio</string>
    <string name="type_andante_tempo">Andante</string>
    <string name="type_allegretto_tempo">Allegretto</string>
    <string name="type_allegro_tempo">Allegro</string>
    <string name="type_presto_tempo">Presto</string>
    <string name="type_prestissimo_tempo">Prestissimo</string>
    <string name="info_progresionTonalViewModel_invalido">Completa la configuración de la progresión cumplimentando todos los campos de las pestañas</string>
    <string name="info_modoEleccionEjercicio">¿Cómo quieres crear el ejercicio?</string>
    <string name="text_borrar">Borrar</string>
    <string name="contentDescriptionFotoPerfil">FotoPerfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>