<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".progresiones.TempoProgresionTonalFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/info_tempo_tonal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/btn_eleccion_tempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/option_tempo_manual"
        android:textOff="@string/option_tempo_manual"
        android:textOn="@string/option_tempo_prefab"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edit_tempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="192dp"
        android:ems="2"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintBottom_toBottomOf="@+id/btn_eleccion_tempo"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill" />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_eleccion_tempo">

        <ScrollView
            android:id="@+id/rbtnGSVTempo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:scrollbarStyle="insideOverlay"
            app:layout_constraintTop_toBottomOf="@+id/btn_eleccion_tempo">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rbtnGCLTempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp">

                <RadioGroup
                    android:id="@+id/rbtnG_tempo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/rbtn_grave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/type_grave_tempo" />

                    <RadioButton
                        android:id="@+id/rbtn_largo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/type_largo_tempo" />

                    <RadioButton
                        android:id="@+id/rbtn_lento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/type_lento_tempo" />

                    <RadioButton
                        android:id="@+id/rbtn_adagio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/type_adagio_tempo" />

                    <RadioButton
                        android:id="@+id/rbtn_andante"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/type_andante_tempo" />

                    <RadioButton
                        android:id="@+id/rbtn_allegretto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/type_allegretto_tempo" />

                    <RadioButton
                        android:id="@+id/rbtn_allegro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/type_allegro_tempo" />

                    <RadioButton
                        android:id="@+id/rbtn_presto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/type_presto_tempo" />

                    <RadioButton
                        android:id="@+id/rbtn_prestissimo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/type_prestissimo_tempo" />
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>