<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adivinar.OpcionTipoEjercicioFragment">


    <TableLayout
        android:id="@+id/tablaTiposProgresionLineal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_tipo_opcion_ejercicio">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">

            <CheckBox
                android:id="@+id/checkBox_triadas_tonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_triadas" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">

            <CheckBox
                android:id="@+id/checkBox_acordes7a_tonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_7asDominante" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">

            <CheckBox
                android:id="@+id/checkBox_1dominante_tonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_otras7as" />
        </TableRow>


    </TableLayout>

    <TextView
        android:id="@+id/textView_tipo_opcion_ejercicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/info_tipo_ejercPorOpciones"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_inversion_opcion_ejercicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/info_inversion_ejercPorOpciones"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tablaTiposProgresionLineal" />

    <RadioGroup
        android:id="@+id/radioGroup_hayInversiones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_inversion_opcion_ejercicio">

        <RadioButton
            android:id="@+id/radioButton_siInversiones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_si" />

        <RadioButton
            android:id="@+id/radioButton_noInversiones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_no" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>