<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/general_grafo"
    app:startDestination="@id/inicialActivity">

    <fragment
        android:id="@+id/inicialActivity"
        android:name="com.audiapp.inicial.InicialFragment"
        android:label="activity_inicial"
        tools:layout="@layout/fragment_inicial">
        <action
            android:id="@+id/action_inicial_to_elegirInicio"
            app:destination="@id/elegirInicioFragment"
            app:popUpTo="@id/inicialActivity"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_inicial_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@+id/inicialActivity"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_inicial_to_funcionalidadApp"
            app:destination="@id/funcionalidad_app_grafo"
            app:popUpTo="@+id/inicialActivity"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/elegirInicioFragment"
        android:name="com.audiapp.inicial.ElegirInicioFragment"
        android:label="activity_elegir_inicio"
        tools:layout="@layout/fragment_elegir_inicio">
        <action
            android:id="@+id/action_elegirInicio_to_login"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_elegirInicio_to_registro"
            app:destination="@id/registroFragment" />
        <action
            android:id="@+id/action_elegirInicio_to_funcionalidadApp"
            app:destination="@+id/funcionalidad_app_grafo" />
    </fragment>
    <fragment
        android:id="@+id/registroFragment"
        android:name="com.audiapp.inicial.RegistroFragment"
        android:label="@string/title_registro"
        tools:layout="@layout/fragment_registro">
        <action
            android:id="@+id/action_registro_to_login"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.audiapp.inicial.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_funcionalidadApp"
            app:destination="@id/funcionalidad_app_grafo"
            app:popUpTo="@+id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <navigation
        android:id="@+id/funcionalidad_app_grafo"
        app:startDestination="@id/elegirModuloFragment">
        <fragment
            android:id="@+id/elegirModuloFragment"
            android:name="com.audiapp.inicial.ElegirModuloFragment"
            android:label="@string/title_elegir_modulo"
            tools:layout="@layout/fragment_elegir_modulo">
            <action
                android:id="@+id/action_elegirModulo_to_crearProgresion"
                app:destination="@id/crearProgresionAcordesFragment"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim" />
            <action
                android:id="@+id/action_elegirModulo_to_modoEleccionEjercicio"
                app:destination="@id/modoEleccionEjercicioFragment" />
            <action
                android:id="@+id/action_elegirModulo_to_gestionProgresiones"
                app:destination="@id/gestionProgresiones_grafo" />
        </fragment>
        <fragment
            android:id="@+id/crearProgresionAcordesFragment"
            android:name="com.audiapp.crearprogresion.CrearProgresionAcordesFragment"
            android:label="@string/title_crear_progresion"
            tools:layout="@layout/fragment_crear_progresion_acordes">
            <action
                android:id="@+id/action_crearProgresionAcordes_to_crearProgresionTempo"
                app:destination="@id/crearProgresionTempoFragment" />
            <action
                android:id="@+id/action_crearProgresionAcordesFragment_to_referenciaAcordesDialog"
                app:destination="@id/referenciaAcordesDialog"
                app:popUpTo="@+id/crearProgresionAcordesFragment"
                app:popUpToInclusive="false" />
        </fragment>
        <fragment
            android:id="@+id/ejercicioPorOpcionesFragment"
            android:name="com.audiapp.adivinar.EjercicioPorOpcionesFragment"
            android:label="@string/title_ejercicio_opciones"
            tools:layout="@layout/fragment_ejercicio_por_opciones" />
        <fragment
            android:id="@+id/reproductorCreadaFragment"
            android:name="com.audiapp.crearprogresion.ReproductorCreadaFragment"
            android:label="@string/title_reproductor"
            tools:layout="@layout/fragment_reproductor_creada" />
        <fragment
            android:id="@+id/modoEleccionEjercicioFragment"
            android:name="com.audiapp.adivinar.ModoEleccionEjercicioFragment"
            android:label="@string/title_elegir_modo_creacion_ejercicio"
            tools:layout="@layout/fragment_modo_eleccion_ejercicio">
            <action
                android:id="@+id/action_modoEleccionEjercicio_to_ejercicioPorOpciones"
                app:destination="@id/ejercicioPorOpcionesFragment" />
        </fragment>
        <fragment
            android:id="@+id/crearProgresionTempoFragment"
            android:name="com.audiapp.crearprogresion.CrearProgresionTempoFragment"
            android:label="@string/title_crear_progresion">
            <action
                android:id="@+id/action_crearProgresionTempo_to_reproductorProgresionCreada"
                app:destination="@id/reproductorCreadaFragment"
                app:popUpTo="@+id/crearProgresionAcordesFragment"
                app:popUpToInclusive="false" />
        </fragment>
        <dialog
            android:id="@+id/referenciaAcordesDialog"
            android:name="com.audiapp.crearprogresion.ReferenciaAcordesDialog"
            android:label="@string/title_referencia_acordes"
            tools:layout="@layout/dialog_referencia_acordes" />
        <navigation
            android:id="@+id/gestionProgresiones_grafo"
            app:startDestination="@id/verProgresionesFragment">
            <fragment
                android:id="@+id/verProgresionesFragment"
                android:name="com.audiapp.gestionprogresiones.VerProgresionesFragment"
                android:label="@string/title_ver_progresiones"
                tools:layout="@layout/fragment_ver_progresiones">
                <action
                    android:id="@+id/action_verProgresiones_to_gestorProgresion"
                    app:destination="@id/gestorProgresionFragment" />
            </fragment>
            <fragment
                android:id="@+id/gestorProgresionFragment"
                android:name="com.audiapp.gestionprogresiones.GestorProgresionFragment"
                android:label="fragment_gestionando_progresion"
                tools:layout="@layout/fragment_gestor_progresion" />
        </navigation>
        <!--fragment
            android:id="@+id/referenciaAcordesFragment"
            android:name="com.audiapp.crearprogresion.ReferenciaAcordesFragment"
            android:label="fragment_referencia_acordes"
            tools:layout="@layout/fragment_referencia_acordes" /-->
    </navigation>
</navigation>